--- a/index.html
+++ b/index.html
@@ -36,19 +36,28 @@
 
   <script>
     // Your web app's Firebase configuration
+
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "firebase/app";
+    import { getAnalytics } from "firebase/analytics";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+    
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyCAYOYDuMKGGjTSJL5uDzG5hjQ6y_vYPiI",
-      authDomain: "auction-website-b12fc.firebaseapp.com",
-      databaseURL: "https://auction-website-b12fc.firebaseio.com",
-      projectId: "auction-website-b12fc",
-      storageBucket: "auction-website-b12fc.appspot.com",
-      messagingSenderId: "791747024664",
-      appId: "1:791747024664:web:215a222a81c6d0c2aeb06d"
+      apiKey: "AIzaSyARZ1aBofNjdNRUkLK9orRJQOC39JoV9KM",
+      authDomain: "kim-no-auction.firebaseapp.com",
+      projectId: "kim-no-auction",
+      storageBucket: "kim-no-auction.appspot.com",
+      messagingSenderId: "643533310491",
+      appId: "1:643533310491:web:0db1f8130ee29e63f106be",
+      measurementId: "G-FQYDMXT7W9"
     };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    var db = firebase.firestore();
-    var auth = firebase.auth();
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
   </script>
   <!-- Navbar -->
   <nav class="navbar navbar-dark bg-primary">
