--- a/index.html
+++ b/index.html
@@ -36,14 +36,6 @@
 
   <script>
     // Your web app's Firebase configuration
-
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "firebase/app";
-    import { getAnalytics } from "firebase/analytics";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-    
-    // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
       apiKey: "AIzaSyARZ1aBofNjdNRUkLK9orRJQOC39JoV9KM",
@@ -58,6 +50,9 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
+    firebase.initializeApp(firebaseConfig);
+    var db = firebase.firestore();
+    var auth = firebase.auth();
   </script>
   <!-- Navbar -->
   <nav class="navbar navbar-dark bg-primary">
