--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
   <script>
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyARZ1aBofNjdNRUkLK9orRJQOC39JoV9KM",
-      authDomain: "kim-no-auction.firebaseapp.com",
-      projectId: "kim-no-auction",
-      storageBucket: "kim-no-auction.appspot.com",
-      messagingSenderId: "643533310491",
-      appId: "1:643533310491:web:0db1f8130ee29e63f106be",
-      measurementId: "G-FQYDMXT7W9"
-   };
+      apiKey: "AIzaSyDrJPDIBEFWS1Fs8qGyh2q15SHhYNNyIGI",
+      authDomain: "kim-no-auction-fcb26.firebaseapp.com",
+      projectId: "kim-no-auction-fcb26",
+      storageBucket: "kim-no-auction-fcb26.appspot.com",
+      messagingSenderId: "483341446245",
+      appId: "1:483341446245:web:8fdf77453ec5621690ea8c"
+    };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     var db = firebase.firestore();
