--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
         <div class="modal-body">
           <p>You are about to place a bid on <strong id="bid-modal-subtitle"></strong></p>
-          <p class="text-muted">(This is just a demo, you're not bidding real money)</p>
+          <p class="text-muted">(This is obviously not the actual payment, we will contact you later for payment details)</p>
           <form onsubmit="return false;">
             <div class="form-floating mb-3">
               <input type="amount" class="form-control" id="amount-input" placeholder="amount"
