--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta property="og:image" content="https://www.mellor.io/auction-website/img/banner.png">
   <meta name="keywords" content="Online Auctions">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Markatplace</title>
-  <link rel="icon" type="image/png" href="./img/favicon.ico">
+  <title>Kim No Art Auction</title>
+  <link rel="icon" type="image/png" href="./img/icons8-collectibles-96.png">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
@@ -21,6 +21,7 @@
     crossorigin="anonymous"></script>
 
   <!-- Custom CSS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="./css/auction-website.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +29,6 @@
 </head>
 
 <body>
-
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-auth.js"></script>
@@ -53,8 +53,8 @@
   <nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
       <a class="navbar-brand mb-0 h1">
-        <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-        The Markatplace
+        <img src="./img/icons8-collectibles-96.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        Kim No Art Auction
       </a>
       <a class="navbar-brand" id="username-display"></a>
       <button id="signup-button" class="btn btn-secondary" type="submit" onclick="openLogin()">Sign up</button>
