Full Name instead of Username (better chance at accurate name)

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="form-floating mb-3">
               <input type="username" class="form-control" id="username-input" placeholder="username"
                 onkeypress="if (event.key == 'Enter') {newUserLogin()}">
-              <label for="username-input">Username</label>
+              <label for="username-input">Full Name</label>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
