--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Kim No Art Auction
       </a>
       <a class="navbar-brand" id="username-display"></a>
-      <button id="signup-button" class="btn btn-secondary" type="submit" onclick="openLogin()">Sign up</button>
+      <button id="signup-button" class="btn btn-outline-light" type="submit" onclick="openLogin()">Sign up</button>
     </div>
   </nav>
   <!-- Grid of auction items -->
@@ -81,11 +81,11 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 id="login-modal-title" class="modal-title">Sign up for Markatplace Auction</h5>
+          <h5 id="login-modal-title" class="modal-title">Sign up for Kim No Art Auction</h5>
         </div>
         <div class="modal-body">
           <p>We use anonymous authentication provided by Google. Your account is attached to your device signature.</p>
-          <p>The username just lets us know who's bidding!</p>
+          <p>Please enter your <b>full name</b> to let us know who's bidding!</p>
           <form onsubmit="return false;">
             <div class="form-floating mb-3">
               <input type="username" class="form-control" id="username-input" placeholder="username"
@@ -93,7 +93,7 @@
               <label for="username-input">Full Name</label>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+              <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal"
                 aria-label="Cancel">Cancel</button>
               <button type="submit" class="btn btn-primary" onclick="newUserLogin()">Sign up</button>
             </div>
@@ -115,7 +115,7 @@
           <img id="info-modal-img"></img>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
+          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" aria-label="Close">Close</button>
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Submit bid"
             onclick="openBid(this.id)">Submit bid</button>
         </div>
@@ -142,7 +142,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Cancel">Cancel</button>
+          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" aria-label="Cancel">Cancel</button>
           <button type="submit" class="btn btn-primary" onclick="placeBid()">Submit bid</button>
         </div>
       </div>
