--- a/index.html
+++ b/index.html
@@ -63,15 +63,14 @@
   <!-- Grid of auction items -->
   <div id="auction-container" class="container">
     <div id="auction-grid" class="row row-cols-1 row-cols-md-3 g-4"></div>
-
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
-        <span class="text-muted">© 2022 Harry Mellor</span>
+        <span class="text-muted">© 2022 Concordia International School Hanoi</span>
       </div>
-
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="bi bi-github text-muted" href="https://github.com/HMellor/" width="24"
-            height="24"></a></li>
+        <li class="ms-3"><a class="bi bi-github text-muted" href="https://github.com/kminh06/" width="24" height="24"></a></li>
+        <li class="ms-3"><a class="bi bi-facebook text-muted" href="https://facebook.com/ConcordiaHanoi/" width="24" height="24"></a></li>
+        <li class="ms-3"><a class="bi bi-instagram text-muted" href="https://instagram.com concordiahanoiofficial/" width="24" height="24"></a></li>
       </ul>
     </footer>
   </div>
