--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="./css/auction-website.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Balthazar|Montserrat|Roboto|Arial&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -70,7 +67,7 @@
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3"><a class="bi bi-github text-muted" href="https://github.com/kminh06/" width="24" height="24"></a></li>
         <li class="ms-3"><a class="bi bi-facebook text-muted" href="https://facebook.com/ConcordiaHanoi/" width="24" height="24"></a></li>
-        <li class="ms-3"><a class="bi bi-instagram text-muted" href="https://instagram.com concordiahanoiofficial/" width="24" height="24"></a></li>
+        <li class="ms-3"><a class="bi bi-instagram text-muted" href="https://instagram.com/concordiahanoiofficial/" width="24" height="24"></a></li>
       </ul>
     </footer>
   </div>
@@ -88,8 +85,13 @@
           <form onsubmit="return false;">
             <div class="form-floating mb-3">
               <input type="username" class="form-control" id="username-input" placeholder="username"
-                onkeypress="if (event.key == 'Enter') {newUserLogin()}">
+                onkeypress="if (event.key == 'Enter') {newUserLogin()}" required>
               <label for="username-input">Full Name</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="email-input" placeholder="email"
+                onkeypress="if (event.key == 'Enter') {newUserLogin()}" required>
+              <label for="email-input">Email</label>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal"
