--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Online Auctions">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kim No Art Auction</title>
-  <link rel="icon" type="image/png" href="./img/icons8-collectibles-96.png">
+  <link rel="icon" type="image/png" href="./img/cish.ico">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
@@ -53,6 +53,11 @@
         <img src="./img/icons8-collectibles-96.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Kim No Art Auction
       </a>
+      <span id="countdown-clock">
+        <p id="clock-label">Auction Ends In</p>
+        <p id="demo"></p>
+        <script src="./js/countdown.js"></script>
+      </span>
       <a class="navbar-brand" id="username-display"></a>
       <button id="signup-button" class="btn btn-outline-light" type="submit" onclick="openLogin()">Sign up</button>
     </div>
