--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:image" content="https://www.mellor.io/auction-website/img/banner.png">
   <meta name="keywords" content="Online Auctions">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kim No Art Auction</title>
+  <title>Charity Auction</title>
   <link rel="icon" type="image/png" href="./img/cish.ico">
 
   <!-- Bootstrap -->
@@ -51,7 +51,7 @@
     <div class="container-fluid">
       <a class="navbar-brand mb-0 h1">
         <img src="./img/icons8-collectibles-96.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-        Kim No Art Auction
+        Kim No Charity Auction
       </a>
       <span id="countdown-clock">
         <p id="clock-label">Auction Ends In</p>
@@ -137,7 +137,7 @@
         </div>
         <div class="modal-body">
           <p>You are about to place a bid on <strong id="bid-modal-subtitle"></strong></p>
-          <p class="text-muted">(This is obviously not the actual payment, we will contact you later for payment details)</p>
+          <p class="text-muted">(If you win, we will contact you later for payment details using your email adress.)</p>
           <form onsubmit="return false;">
             <div class="form-floating mb-3">
               <input type="amount" class="form-control" id="amount-input" placeholder="amount"
