--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
       <button id="signup-button" class="btn btn-outline-light" type="submit" onclick="openLogin()">Sign up</button>
     </div>
   </nav>
+  <div id="auction-done">
+    <h1>AUCTION HAS ENDED</h1>
+    <h2>Thanks for participating!</h2>
+  </div>
   <!-- Grid of auction items -->
-  <div id="auction-container" class="container">
+  <div id="auction-container" class="container hidden">
     <div id="auction-grid" class="row row-cols-1 row-cols-md-3 g-4"></div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
