--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
   <meta property="og:image" content="https://www.mellor.io/auction-website/img/banner.png">
   <meta name="keywords" content="Online Auctions">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charity Auction</title>
-  <link rel="icon" type="image/png" href="./img/cish.ico">
+  <title>Revolution Youth Silent Auction</title>
+  <link rel="icon" type="image/png" href="./img/favicon.ico">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="./css/auction-website.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Balthazar|Montserrat|Roboto|Arial&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-auth.js"></script>
@@ -34,12 +37,12 @@
   <script>
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDrJPDIBEFWS1Fs8qGyh2q15SHhYNNyIGI",
-      authDomain: "kim-no-auction-fcb26.firebaseapp.com",
-      projectId: "kim-no-auction-fcb26",
-      storageBucket: "kim-no-auction-fcb26.appspot.com",
-      messagingSenderId: "483341446245",
-      appId: "1:483341446245:web:8fdf77453ec5621690ea8c"
+    apiKey: "AIzaSyBKzCW6kd9sPL6u45ZMVREifCfFYK4bxL4",
+    authDomain: "silent-auction-12b27.firebaseapp.com",
+    projectId: "silent-auction-12b27",
+    storageBucket: "silent-auction-12b27.appspot.com",
+    messagingSenderId: "732282129296",
+    appId: "1:732282129296:web:40919a62811630e2ab0115",
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
@@ -50,33 +53,25 @@
   <nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
       <a class="navbar-brand mb-0 h1">
-        <img src="./img/icons8-collectibles-96.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-        Kim No Charity Auction
+        <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        Revolution Youth Silent Auction
       </a>
-      <span id="countdown-clock">
-        <p id="clock-label">Auction Ends In</p>
-        <p id="demo"></p>
-        <script src="./js/countdown.js"></script>
-      </span>
       <a class="navbar-brand" id="username-display"></a>
-      <button id="signup-button" class="btn btn-outline-light" type="submit" onclick="openLogin()">Sign up</button>
+      <button id="signup-button" class="btn btn-secondary" type="submit" onclick="openLogin()">Sign up</button>
     </div>
   </nav>
-  <div id="auction-done">
-    <h1>AUCTION HAS ENDED</h1>
-    <h2>Thanks for participating!</h2>
-  </div>
   <!-- Grid of auction items -->
   <div id="auction-container" class="container">
     <div id="auction-grid" class="row row-cols-1 row-cols-md-3 g-4"></div>
+
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
-        <span class="text-muted">© 2022 Concordia International School Hanoi</span>
+        <span class="text-muted">© 2022 Harry Mellor</span>
       </div>
+
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="bi bi-github text-muted" href="https://github.com/kminh06/" width="24" height="24"></a></li>
-        <li class="ms-3"><a class="bi bi-facebook text-muted" href="https://facebook.com/ConcordiaHanoi/" width="24" height="24"></a></li>
-        <li class="ms-3"><a class="bi bi-instagram text-muted" href="https://instagram.com/concordiahanoiofficial/" width="24" height="24"></a></li>
+        <li class="ms-3"><a class="bi bi-github text-muted" href="https://github.com/HMellor/" width="24"
+            height="24"></a></li>
       </ul>
     </footer>
   </div>
@@ -86,24 +81,19 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 id="login-modal-title" class="modal-title">Sign up for Kim No Art Auction</h5>
+          <h5 id="login-modal-title" class="modal-title">Sign up for Markatplace Auction</h5>
         </div>
         <div class="modal-body">
           <p>We use anonymous authentication provided by Google. Your account is attached to your device signature.</p>
-          <p>Please enter your <b>full name</b> to let us know who's bidding!</p>
+          <p>The username just lets us know who's bidding!</p>
           <form onsubmit="return false;">
             <div class="form-floating mb-3">
               <input type="username" class="form-control" id="username-input" placeholder="username"
-                onkeypress="if (event.key == 'Enter') {newUserLogin()}" required>
-              <label for="username-input">Full Name</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="email" class="form-control" id="email-input" placeholder="email"
-                onkeypress="if (event.key == 'Enter') {newUserLogin()}" required>
-              <label for="email-input">Email</label>
+                onkeypress="if (event.key == 'Enter') {newUserLogin()}">
+              <label for="username-input">Username</label>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal"
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                 aria-label="Cancel">Cancel</button>
               <button type="submit" class="btn btn-primary" onclick="newUserLogin()">Sign up</button>
             </div>
@@ -125,7 +115,7 @@
           <img id="info-modal-img"></img>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" aria-label="Close">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Submit bid"
             onclick="openBid(this.id)">Submit bid</button>
         </div>
@@ -141,7 +131,7 @@
         </div>
         <div class="modal-body">
           <p>You are about to place a bid on <strong id="bid-modal-subtitle"></strong></p>
-          <p class="text-muted">(If you win, we will contact you later for payment details using your email adress.)</p>
+          <p class="text-muted"></p>
           <form onsubmit="return false;">
             <div class="form-floating mb-3">
               <input type="amount" class="form-control" id="amount-input" placeholder="amount"
@@ -152,7 +142,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" aria-label="Cancel">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Cancel">Cancel</button>
           <button type="submit" class="btn btn-primary" onclick="placeBid()">Submit bid</button>
         </div>
       </div>
