--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   <!-- Custom CSS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="./css/auction-website.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +26,6 @@
 </head>
 
 <body>
-
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-auth.js"></script>
@@ -56,6 +53,11 @@
         <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Revolution Youth Silent Auction
       </a>
+      <span id="countdown-clock">
+        <p id="clock-label">Auction Ends In</p>
+        <p id="demo"></p>
+        <script src="./js/countdown.js"></script>
+      </span>
       <a class="navbar-brand" id="username-display"></a>
       <button id="signup-button" class="btn btn-secondary" type="submit" onclick="openLogin()">Sign up</button>
     </div>
@@ -63,16 +65,15 @@
   <!-- Grid of auction items -->
   <div id="auction-container" class="container">
     <div id="auction-grid" class="row row-cols-1 row-cols-md-3 g-4"></div>
-
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
-        <span class="text-muted">© 2022 Harry Mellor</span>
+        <span class="text-muted">© 2023 Matt Schlabach</span>
       </div>
-
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="bi bi-github text-muted" href="https://github.com/HMellor/" width="24"
+        <li class="ms-3"><a class="bi bi-github text-muted" href="https://github.com/MCACHURCH/" width="24"
             height="24"></a></li>
       </ul>
+
     </footer>
   </div>
 
@@ -85,14 +86,19 @@
         </div>
         <div class="modal-body">
           <p>We use anonymous authentication provided by Google. Your account is attached to your device signature.</p>
-          <p>The username just lets us know who's bidding!</p>
+          <p>Your name just lets us know who's bidding!</p>
           <form onsubmit="return false;">
             <div class="form-floating mb-3">
               <input type="username" class="form-control" id="username-input" placeholder="username"
                 onkeypress="if (event.key == 'Enter') {newUserLogin()}">
-              <label for="username-input">Username</label>
+              <label for="username-input">First & Last Name</label>
             </div>
             <div class="modal-footer">
+
+
+
+
+
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                 aria-label="Cancel">Cancel</button>
               <button type="submit" class="btn btn-primary" onclick="newUserLogin()">Sign up</button>
