--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
         <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Revolution Youth Silent Auction
       </a>
+      <subtitle>To place a bid, text your name, bid, and item to 330.763.1399</subtitle>
       <span id="countdown-clock">
         <p id="clock-label">Auction Ends In</p>
         <p id="demo"></p>
         <script src="./js/countdown.js"></script>
       </span>
-      <a class="navbar-brand" id="username-display"></a>
+      <!--<a class="navbar-brand" id="username-display"></a>-->
       <button id="signup-button" class="btn btn-secondary" type="submit" onclick="openLogin()">Sign up</button>
     </div>
   </nav>
@@ -77,7 +78,7 @@
     </footer>
   </div>
 
-  <!-- Login popup -->
+   Login popup
   <div id="login-modal" class="modal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
@@ -94,14 +95,14 @@
               <label for="username-input">First & Last Name</label>
             </div>
             <div class="modal-footer">
-
+            
 
 
 
 
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                 aria-label="Cancel">Cancel</button>
-              <button type="submit" class="btn btn-primary" onclick="newUserLogin()">Sign up</button>
+             <!-- <button type="submit" class="btn btn-primary" onclick="newUserLogin()">Sign up</button> -->
             </div>
           </form>
         </div>
@@ -123,7 +124,6 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Submit bid"
-            onclick="openBid(this.id)">Submit bid</button>
         </div>
       </div>
     </div>
