--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Revolution Youth Silent Auction
       </a>
-      <subtitle>To place a bid, text your name, bid, and item to 330.763.1399</subtitle>
+      <subtitle>To place a bid text your name, bid, and item number to 330.763.1399</subtitle>
       <span id="countdown-clock">
         <p id="clock-label">Auction Ends In</p>
         <p id="demo"></p>
         <script src="./js/countdown.js"></script>
       </span>
-      <!--<a class="navbar-brand" id="username-display"></a>-->
-      <button id="signup-button" class="btn btn-secondary" type="submit" onclick="openLogin()">Sign up</button>
+      <!--<a class="navbar-brand" id="username-display"></a>
+      <button id="signup-button" class="btn btn-secondary" type="submit" onclick="openLogin()">Sign up</button>-->
     </div>
   </nav>
   <!-- Grid of auction items -->
