:remove login popup

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </footer>
   </div>
 
-   Login popup
+   <!--Login popup-->
   <div id="login-modal" class="modal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
