remove phone link on mobile

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Revolution Youth Silent Auction
       </a>
-      <subtitle style="color:white">To place a bid text your name, bid, and item number to 330-763-1399</subtitle>
+      <subtitle name="format-detection" content="telephone=no">To place a bid text your name, bid, and item number to 330-763-1399</subtitle>
       <span id="countdown-clock">
         <p id="clock-label">Auction Ends In</p>
         <p id="demo"></p>
