--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
     var auth = firebase.auth();
   </script>
   <!-- Navbar -->
-  <nav class="navbar navbar-dark bg-primary">
+  <nav class="navbar navbar-dark bg-primary" >
     <div class="container-fluid">
       <a class="navbar-brand mb-0 h1">
         <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Revolution Youth Silent Auction
       </a>
-      <subtitle name="format-detection" content="telephone=no">To place a bid text your name, bid, and item number to 330-763-1399</subtitle>
+      <meta name="format-detection" content="telephone=no">
+      <subtitle>To place a bid text your name, bid, and item number to 330-763-1399</subtitle>
       <span id="countdown-clock">
         <p id="clock-label">Auction Ends In</p>
         <p id="demo"></p>
